--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
+    "vuesax3": "^4.1.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
