--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@j-t-mcc/vue3-chartjs": "^1.3.0",
+    "apexcharts": "^3.39.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "bootstrap-vue-3": "^0.2.12",
+    "chart.js": "^3.7.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
     "mitt": "^3.0.0",
@@ -28,6 +31,7 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
+    "vue3-apexcharts": "^1.4.1",
     "vuesax3": "^4.1.1",
     "vuex": "^4.0.0"
   },
