--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@j-t-mcc/vue3-chartjs": "^1.3.0",
     "apexcharts": "^3.39.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.9.1",
     "bootstrap-vue-3": "^0.2.12",
     "chart.js": "^3.7.0",
@@ -33,13 +33,16 @@
     "vue-router": "^4.0.3",
     "vue3-apexcharts": "^1.4.1",
     "vuesax3": "^4.1.1",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.9.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "leaflet": "^1.9.4",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "unplugin-vue-components": "^0.24.0"
