--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-apexcharts": "^1.4.1",
+    "vuefinder": "^1.2.5",
     "vuesax3": "^4.1.1",
     "vuex": "^4.0.0"
   },
