Hot run action 選新增電池交換/ Menu 菜單中英模式翻譯

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
   },
   "peacock.color": "#f9e64f",
   "vue-i18n.i18nPaths": "src\\locales",
-  "i18n-ally.localesPaths": ["src/locales"]
+  "i18n-ally.localesPaths": ["src/locales"],
+  "i18n-ally.keystyle": "nested"
 }
