--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.2.13",
     "vue-dark-switch": "^1.0.6",
     "vue-i18n": "^9.2.2",
+    "vue-picture-cropper": "^0.7.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-apexcharts": "^1.4.1",
