--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
+    "loadsh": "^0.0.4",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
     "ol": "^7.3.0",
@@ -32,18 +33,19 @@
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-apexcharts": "^1.4.1",
-    "vuesax3": "^4.1.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue-leaflet/vue-leaflet": "^0.9.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "leaflet": "^1.9.4",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "typescript": "~4.5.5",
     "unplugin-vue-components": "^0.24.0"
   },
   "browserslist": [
