--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@j-t-mcc/vue3-chartjs": "^1.3.0",
+    "@microsoft/signalr": "^8.0.0",
     "apexcharts": "^3.39.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
