chanke color of AGVS_UI in IDE

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,25 +2,25 @@
   "typescript.suggest.paths": false,
   "javascript.suggest.paths": false,
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#fbed80",
-    "activityBar.background": "#fbed80",
+    "activityBar.activeBackground": "#408cfd",
+    "activityBar.background": "#408cfd",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#06b9a5",
+    "activityBarBadge.background": "#fec0d9",
     "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#fbed80",
-    "statusBar.background": "#f9e64f",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#f7df1e",
-    "statusBarItem.remoteBackground": "#f9e64f",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#f9e64f",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#f9e64f99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#408cfd",
+    "statusBar.background": "#0d6efd",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#408cfd",
+    "statusBarItem.remoteBackground": "#0d6efd",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#0d6efd",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#0d6efd99",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#f9e64f",
+  "peacock.color": "#0d6efd",
   "vue-i18n.i18nPaths": "src\\locales",
   "i18n-ally.localesPaths": ["src/locales"],
   "i18n-ally.keystyle": "nested",
