--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.3",
+    "html2canvas": "^1.4.1",
     "loadsh": "^0.0.4",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
