--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,25 +2,25 @@
   "typescript.suggest.paths": false,
   "javascript.suggest.paths": false,
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#408cfd",
-    "activityBar.background": "#408cfd",
+    "activityBar.activeBackground": "#93e6fc",
+    "activityBar.background": "#93e6fc",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#fec0d9",
+    "activityBarBadge.background": "#fa45d4",
     "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#408cfd",
-    "statusBar.background": "#0d6efd",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#408cfd",
-    "statusBarItem.remoteBackground": "#0d6efd",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#0d6efd",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#0d6efd99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "commandCenter.border": "#15202b99",
+    "sash.hoverBorder": "#93e6fc",
+    "statusBar.background": "#61dafb",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#2fcefa",
+    "statusBarItem.remoteBackground": "#61dafb",
+    "statusBarItem.remoteForeground": "#15202b",
+    "titleBar.activeBackground": "#61dafb",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#61dafb99",
+    "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#0d6efd",
+  "peacock.color": "#61dafb",
   "vue-i18n.i18nPaths": "src\\locales",
   "i18n-ally.localesPaths": ["src/locales"],
   "i18n-ally.keystyle": "nested",
