--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gpm_agvs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "standard-version & vue-cli-service build"
   },
   "dependencies": {
     "@j-t-mcc/vue3-chartjs": "^1.3.0",
@@ -47,6 +47,7 @@
     "leaflet": "^1.9.4",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "standard-version": "^9.5.0",
     "typescript": "~4.5.5",
     "unplugin-vue-components": "^0.24.0"
   },
